# Auto-Detail

./: .pre-commit-config.yaml  README.md  auto_detail.py  backend.py  cli.py  config.py  pyproject.toml  setup.cfg
.detail/notes/: 2025-08-28-403a65.yaml  2025-08-29-21fb69.yaml  2025-08-29-2904b4.yaml  2025-08-29-4852fd.yaml  2025-08-29-4e27e4.yaml  2025-08-29-8526ac.yaml  2025-08-29-8edbfa.yaml  2025-08-29-a92353.yaml  2025-08-29-d1be0b.yaml  2025-08-29-db5d85.yaml  2025-08-30-05d5fc.yaml  2025-08-30-0f5554.yaml  2025-08-30-124d55.yaml  2025-08-30-341248.yaml  2025-08-30-9be807.yaml  2025-08-30-c507b1.yaml  2025-08-31-d9fdeb.yaml  2025-09-02-dc9c3b.yaml  2025-09-04-01264b.yaml  2025-09-04-298e08.yaml  2025-09-04-3678af.yaml  2025-09-04-4ee57c.yaml  2025-09-04-9fca04.yaml  2025-09-04-aa78c5.yaml  2025-09-04-dc77c5.yaml  2025-09-04-e9c3ce.yaml  2025-09-04-fbead3.yaml
auto_detail/: auto_detail.py  backend.py  cli.py
auto_detail/tests/: test_auto_detail.py
src/: auto_detail.py
tests/: conftest.py  test_auto_detail.py
